--- a/html/index.html
+++ b/html/index.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <head>
-    <meta charset='utf-8'/>
-    <link rel="stylesheet" type="text/css" media="screen" href="../css/lab08.css" />
-    <title>Dog Picker</title>
+  <meta charset='utf-8'/>
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/lab08.css" />
+  <title>Dog Picker</title>
+  <link rel="stylesheet" href="./css/lab08.css">
 </head>
 
 <body>
-    <!--CONTENT HERE-->
-</body>
+  <div id="wrapper">
+    <div id="header">
+      <div id="title">
+        <h1>Dogs & More<h1>
+        </div>
+        <div id="navbar">
+          <button id="seeDogs" class="blockbutton">See Dogs</button>
+          <button id="seeCats" class="blockbutton">See Cats</button>
+          <button id="seeOtherPets" class="blockbutton">See Other Pets</button>
+        </div>
+      </div>
+      <div id="gallery">
+        <div id="animal1" class="animalbox">
+          <div id="image1" class="image">
+            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+          </div>
+          <div class="infodiv">
+            <h3 id="name1">Name</h3>
+            <p id="bio1">Bio</p>
+          </div>
+        </div>
+        <div id="animal2" class="animalbox">
+          <div id="image2" class="image">
+            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+          </div>
+          <div class="infodiv">
+            <h3 id="name2">Name</h3>
+            <p id="bio2">Bio</p>
+          </div>
+        </div>
+        <div id="animal3" class="animalbox">
+          <div id="image3" class="image">
+            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+          </div>
+          <div class="infodiv">
+            <h3 id="name3">Name</h3>
+            <p id="bio3">Bio</p>
+          </div>
+        </div>
+        <div id="animal4" class="animalbox">
+          <div id="image4" class="image">
+            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+          </div>
+          <div class="infodiv">
+            <h3 id="name4">Name</h3>
+            <p id="bio4">Bio</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 
 
-</html>
+  </html>
