--- a/html/index.html
+++ b/html/index.html
@@ -7,57 +7,57 @@
 </head>
 
 <body>
-  <div id="wrapper">
-    <div id="header">
-      <div id="title">
-        <h1>Dogs & More<h1>
-        </div>
-        <div id="navbar">
-          <button id="seeDogs" class="blockbutton">See Dogs</button>
-          <button id="seeCats" class="blockbutton">See Cats</button>
-          <button id="seeOtherPets" class="blockbutton">See Other Pets</button>
-        </div>
+
+  <div id="header">
+    <div id="title">
+      <h1>Dogs & More</h1>
+    </div>
+    <div id="navbar">
+      <button id="seeDogs" class="blockbutton">See Dogs</button>
+      <button id="seeCats" class="blockbutton">See Cats</button>
+      <button id="seeOtherPets" class="blockbutton">See Other Pets</button>
+    </div>
+  </div>
+  <div id="gallery">
+    <div id="animal1" class="animalbox">
+      <div id="image1" class="image">
+        <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
       </div>
-      <div id="gallery">
-        <div id="animal1" class="animalbox">
-          <div id="image1" class="image">
-            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
-          </div>
-          <div class="infodiv">
-            <h3 id="name1">Name</h3>
-            <p id="bio1">Bio</p>
-          </div>
-        </div>
-        <div id="animal2" class="animalbox">
-          <div id="image2" class="image">
-            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
-          </div>
-          <div class="infodiv">
-            <h3 id="name2">Name</h3>
-            <p id="bio2">Bio</p>
-          </div>
-        </div>
-        <div id="animal3" class="animalbox">
-          <div id="image3" class="image">
-            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
-          </div>
-          <div class="infodiv">
-            <h3 id="name3">Name</h3>
-            <p id="bio3">Bio</p>
-          </div>
-        </div>
-        <div id="animal4" class="animalbox">
-          <div id="image4" class="image">
-            <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
-          </div>
-          <div class="infodiv">
-            <h3 id="name4">Name</h3>
-            <p id="bio4">Bio</p>
-          </div>
-        </div>
+      <div class="infodiv">
+        <h3 id="name1">Name</h3>
+        <p id="bio1">Bio</p>
       </div>
     </div>
-  </body>
+    <div id="animal2" class="animalbox">
+      <div id="image2" class="image">
+        <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+      </div>
+      <div class="infodiv">
+        <h3 id="name2">Name</h3>
+        <p id="bio2">Bio</p>
+      </div>
+    </div>
+    <div id="animal3" class="animalbox">
+      <div id="image3" class="image">
+        <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+      </div>
+      <div class="infodiv">
+        <h3 id="name3">Name</h3>
+        <p id="bio3">Bio</p>
+      </div>
+    </div>
+    <div id="animal4" class="animalbox">
+      <div id="image4" class="image">
+        <img src="https://dummyimage.com/200x250/000/fff.png" alt="dog">
+      </div>
+      <div class="infodiv">
+        <h3 id="name4">Name</h3>
+        <p id="bio4">Bio</p>
+      </div>
+    </div>
+  </div>
+
+</body>
 
 
-  </html>
+</html>
