--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset='utf-8'/>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/lab08.css" />
-  <title>Dog Picker</title>
+  <title>Dogs & More</title>
   <link rel="stylesheet" href="./css/lab08.css">
 </head>
 
@@ -11,6 +11,7 @@
   <div id="header">
     <div id="title">
       <h1>Dogs & More</h1>
+      <img id='paw' src='../img/dog-paw.svg'>
     </div>
     <div id="navbar">
       <button id="seeDogs" class="blockbutton">See Dogs</button>
@@ -18,6 +19,50 @@
     </div>
   </div>
   <div id="gallery">
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog0.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <h4 class='treatheader'>Favourite Treat</h4>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog1.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <h4 class='treatheader'>Favourite Treat</h4>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog2.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <h4 class='treatheader'>Favourite Treat</h4>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog3.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <h4 class='treatheader'>Favourite Treat</h4>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
   </div>
 
 </body>
