--- a/html/index.html
+++ b/html/index.html
@@ -18,8 +18,7 @@
       <button id="seeCats" class="blockbutton">See Cats</button>
     </div>
   </div>
-  <div id="gallery">
-  </div>
+  <div id="gallery"></div>
 
 </body>
 
