--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,48 @@
       <button id="seeCats" class="blockbutton">See Cats</button>
     </div>
   </div>
-  <div id="gallery"></div>
+  <div id="gallery">
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog0.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li>Treat</li><li>Treat</li><li>Treat</li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog1.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog2.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+    <div id='animal1' class='animalbox'>
+     <div id='image1' class='image'>
+        <img src='../img/dog3.jpg' alt='dog'>
+      </div>
+      <div class='infodiv'>
+        <h3 id='name1'>Name</h3>
+        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+      </div>
+    </div>
+</div>
 
 </body>
 
