--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
   <div id="header">
     <div id="title">
       <h1>Dogs & More</h1>
-      <img id='paw' src='../img/dog-paw.svg'>
+      <!--<img id='paw' src='../img/dog-paw.svg'>-->
     </div>
     <div id="navbar">
       <button id="seeDogs" class="blockbutton">See Dogs</button>
@@ -21,46 +21,48 @@
   <div id="gallery">
     <div id='animal1' class='animalbox'>
      <div id='image1' class='image'>
-        <img src='../img/dog0.jpg' alt='dog'>
+        <!--<img src='../img/dog0.jpg' alt='dog'>-->
       </div>
       <div class='infodiv'>
         <h3 id='name1'>Name</h3>
         <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
-        <div class='treatlist' id='treats1'><ul><li>Treat</li><li>Treat</li><li>Treat</li></ul></div>
+        <div class='treatlist' id='treats2'><ul><li>Treat</li><li>Treat</li><li>Treat</li></ul></div>
       </div>
     </div>
     <div id='animal1' class='animalbox'>
      <div id='image1' class='image'>
-        <img src='../img/dog1.jpg' alt='dog'>
+        <!--<img src='../img/dog1.jpg' alt='dog'>-->
       </div>
       <div class='infodiv'>
         <h3 id='name1'>Name</h3>
-        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
-        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+        <button class='treatButton' id='showTreats2'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats2'><ul><li></li><li></li><li></li></ul></div>
       </div>
     </div>
     <div id='animal1' class='animalbox'>
      <div id='image1' class='image'>
-        <img src='../img/dog2.jpg' alt='dog'>
+        <!--<img src='../img/dog2.jpg' alt='dog'>-->
       </div>
       <div class='infodiv'>
         <h3 id='name1'>Name</h3>
-        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
-        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+        <button class='treatButton' id='showTreats3'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats3'><ul><li></li><li></li><li></li></ul></div>
       </div>
     </div>
     <div id='animal1' class='animalbox'>
      <div id='image1' class='image'>
-        <img src='../img/dog3.jpg' alt='dog'>
+        <!--<img src='../img/dog3.jpg' alt='dog'>-->
       </div>
       <div class='infodiv'>
         <h3 id='name1'>Name</h3>
-        <button class='treatButton' id='showTreats1'>Show Favourite Treats</button>
-        <div class='treatlist' id='treats1'><ul><li></li><li></li><li></li></ul></div>
+        <button class='treatButton' id='showTreats4'>Show Favourite Treats</button>
+        <div class='treatlist' id='treats4'><ul><li></li><li></li><li></li></ul></div>
       </div>
     </div>
 </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../js/client.js"></script>
 </body>
 
 
