--- a/html/index.html
+++ b/html/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
   <meta charset='utf-8'/>
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/lab08.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/lab08.css" />
   <title>Dogs & More</title>
-  <link rel="stylesheet" href="./css/lab08.css">
 </head>
 
 <body>
@@ -11,7 +10,7 @@
   <div id="header">
     <div id="title">
       <h1>Dogs & More</h1>
-      <!--<img id='paw' src='../img/dog-paw.svg'>-->
+      <img id='paw' src='img/dog-paw.svg'>
     </div>
     <div id="navbar">
       <button id="seeDogs" class="blockbutton">See Dogs</button>
@@ -19,11 +18,10 @@
     </div>
   </div>
   <div id="gallery">
-    
-</div>
+  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="../js/client.js"></script>
+    <script src="js/client.js"></script>
 </body>
 
 
